upd: statistics event ticket assignment
